# HaskellDocs

./: .gitignore  Index.hs  Main.hs  cabal.config  haskelldocs.cabal  upload.sh
DB/: Database.hs
DB/sql/: create_document_component_table.sql  create_documents_table.sql
Models/: Document.hs  DocumentComponent.hs
Processors/: UploadProcessor.hs  Utils.hs
Utils/: DateUtils.hs  Helpers.hs  ImageUtils.hs  TesseractUtils.hs
Views/: AllDocuments.hs  Documents.hs  Index.hs  ViewUtils.hs
assets/: _2016-2-20_0-45-451"large_man.jpg"
assets/css/: styles.css
