name:                haskelldocs
version:             0.0.1
synopsis:            Document storage and retrieval
homepage:            https://github.com/caneroj1/HaskellDocs
license:             MIT
author:              Joseph Canero
maintainer:          jmc41493@gmail.com
category:            Web
build-type:          Simple
cabal-version:       >=1.8

executable haskelldocs
  main-is:             Main.hs
  -- other-modules:
  build-depends:       base >=4.6
                     , wai
                     , warp
                     , http-types
                     , resourcet
                     , scotty
                     , text
                     , bytestring
                     , blaze-html
                     , persistent
                     , persistent-template
                     , persistent-sqlite
                     , persistent-postgresql
                     , monad-logger
                     , heroku
                     , transformers
                     , wai-middleware-static
                     , wai-extra
                     , time
                     , filepath
                     , process
